<resources>
    <string name="app_name">Baca Lagi</string>
    <string name="web_client_id">396789053314-hpd9psv7oo8n2aaoqr24luk3mkuagt5j.apps.googleusercontent.com</string>

    <string-array name="pictures">
        <item>From Camera</item>
        <item>From Gallery</item>
    </string-array>

    <string name="hint_phone_number" translatable="false">08xxxxxxxxxx</string>
    <string name="label_phone_number">Whatsapp Number</string>
    <string name="shr_province">Province</string>
    <string name="shr_hint_province">Province</string>
    <string name="shr_address">Address</string>
    <string name="shr_city">Regency</string>
    <string name="shr_hint_city">Regency</string>
    <string name="shr_kecamatan">Subdistrict</string>
    <string name="shr_kelurahan">Neighborhood</string>
    <string name="shr_hint_address">Address</string>
    <string name="shr_title">Title</string>
    <string name="shr_author">Author</string>
    <string name="shr_publisher">Publisher</string>
    <string name="shr_publish_year">Publish Year</string>
    <string name="shr_buy_price">Buy Price</string>
    <string name="shr_isbn" translatable="false">ISBN</string>
    <string name="shr_language">Language</string>
    <string name="shr_description">Description</string>
    <string name="shr_agreement">Use Recomendation?</string>
    <string name="shr_hint_price">Price</string>
    <string name="btn_label_start_reading">Start Reading</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>
    <string name="dialog_msg_sign_out">Are you sure to sign out?</string>
    <string name="btn_label_sign_in_google">Continue with Google</string>
    <string name="btn_label_sign_out">Sign Out</string>
    <string name="notif_connection_connected">Connected</string>
    <string name="notif_connection_disconnected">Disconnected</string>
    <string name="btn_label_sign_in_again">Sign In Again</string>
    <string name="title_failed_unauthorize">Your Session Was Ended</string>
    <string name="msg_failed_unauthorize">Please sing in again to use Baca Lagi application</string>
    <string name="code_unauthorized" translatable="false">Unauthorized</string>
    <string name="appbar_title_register">Additional Information</string>
    <string name="appbar_title_profile">My Profile</string>
    <string name="appbar_title_setting">App Setting</string>
    <string name="content_description_ic_theme_switch" translatable="false">Theme Swtich Icon</string>
    <string name="tile_label_theme">App Theme</string>
    <string name="tile_label_language">Language</string>
    <string name="content_description_ic_language_switch" translatable="false">Language Switch icon</string>
    <string name="tile_label_transaction">Transaction</string>
    <string name="tile_label_edit_profile">Edit Profile</string>
    <string name="tile_label_setting">Settings</string>
    <string name="tile_label_faq" translatable="false">FaQ</string>
    <string name="tile_label_privacy_policy">Privacy Policy</string>
    <string name="tile_label_my_books">My Books</string>
    <string name="dialog_title_sign_out">Sign Out</string>
    <string name="edt_label_name">Name</string>
    <string name="edt_label_phone">Phone Number (Whatsapp)</string>
    <string name="edt_label_province">Province</string>
    <string name="edt_label_regency">Regency</string>
    <string name="edt_label_address">Address</string>

    <string name="appbar_title_book">My Books</string>
    <string name="appbar_title_edit_profile">Edit Profile</string>
    <string name="appbar_title_post">Post Book</string>
    <string name="appbar_title_faq">Frequently Ask Question</string>
    <string name="appbar_title_privacy_policy">Privacy Policy</string>
    <string name="change_image">Change Image</string>
    <string name="button_save">Save</string>
    <string name="submit">Submit</string>
    <string name="set_as_done">Set as Sold</string>
    <string name="dummy_desc" translatable="false">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Feugiat scelerisque varius morbi enim nunc. Ac tortor vitae purus faucibus ornare suspendisse. Neque viverra justo nec ultrices dui sapien eget. Tempor orci dapibus ultrices in iaculis nunc sed augue. Nec nam aliquam sem et tortor consequat. Vitae proin sagittis nisl rhoncus. Viverra maecenas accumsan lacus vel facilisis volutpat. Sed augue lacus viverra vitae congue. Consequat id porta nibh venenatis cras sed felis. Ultricies integer quis auctor elit sed vulputate.</string>

    <string name="appbar_title_select_province">Select Province</string>
    <string name="appbar_title_select_regency">Select Regency</string>
    <string name="dialog_title_error" translatable="false">Error</string>
    <string name="dialog_title_warning">Warning</string>
    <string name="dialog_msg_name_field_empty">Please fill in the name field</string>
    <string name="dialog_msg_phone_number_field_empty">Please fill in the phone number field</string>
    <string name="dialog_msg_province_field_empty">Please fill in the province field</string>
    <string name="dialog_msg_regency_field_empty">Please fill in the regency field</string>
    <string name="dialog_msg_address_field_empty">Please fill in the address field</string>
    <string name="upload_image">Add Image</string>
    <string name="button_submit">Submit</string>
    <string name="dialog_msg_title_field_empty">Judul Masih Kosong</string>
    <string name="dialog_msg_author_field_empty">Author Masih Kosong</string>
    <string name="dialog_msg_publisher_field_empty">Publisher Masih Kosong</string>
    <string name="dialog_msg_publish_year_field_empty">Publish Year Masih Kosong</string>
    <string name="dialog_msg_buy_price_field_empty">Buy Price Masih Kosong</string>
    <string name="dialog_msg_isbn_field_empty">ISBN masih kosong</string>
    <string name="dialog_msg_language_field_empty">Language Masih Kosong</string>
    <string name="dialog_msg_description_field_empty">Description Masih Kosong</string>
    <string name="dialog_msg_image_field_empty">Image cannot be empty</string>
    <string name="chat">Chat</string>
    <string name="book_title">Title Book</string>
    <string name="title_my_book">My Books</string>
    <string name="dialog_title_delete_book" translatable="false">Delete Book</string>
    <string name="dialog_msg_delete_book">Are you sure to delete this book?</string>

</resources>