<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.view.post_detail.DetailPostFragment">

    <include
        android:id="@+id/main_toolbar"
        layout="@layout/toolbar_main"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ScrollView
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@id/filledButton_post"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/main_toolbar">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="@dimen/dimen_16dp">

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/iv_product"
                android:layout_width="@dimen/dimen_128dp"
                android:layout_height="@dimen/dimen_128dp"
                android:layout_gravity="center"
                android:src="@drawable/ic_camera"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tv_title"
                style="@style/Theme.BacaLagi.Text.TitleLarge"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/shr_title"
                android:textAllCaps="true"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tv_description"
                style="@style/Theme.BacaLagi.Text.BodyMedium"
                android:layout_width="match_parent"
                android:layout_height="128dp"
                android:layout_marginTop="16dp"
                android:text="@string/shr_description" />

            <TextView
                android:id="@+id/label_price_recommendation"
                style="@style/Theme.BacaLagi.Text.LabelLarge"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="Price Recommendation" />

            <TextView
                android:id="@+id/tv_price_recommendation"
                style="@style/Theme.BacaLagi.Text.BodyMedium"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:text="Rp100.000" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/tv_agreement"
                    style="@style/Theme.BacaLagi.Text.LabelMedium"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center_vertical"
                    android:text="@string/shr_agreement" />

                <com.google.android.material.button.MaterialButtonToggleGroup
                    android:id="@+id/toggleButton"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    app:singleSelection="true">

                    <Button
                        android:id="@+id/button1"
                        style="?attr/materialButtonOutlinedStyle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="No" />

                    <Button
                        android:id="@+id/button2"
                        style="?attr/materialButtonOutlinedStyle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Yes" />
                </com.google.android.material.button.MaterialButtonToggleGroup>
            </LinearLayout>

            <TextView
                android:id="@+id/label_price"
                style="@style/Theme.BacaLagi.Text.LabelLarge"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="Price" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tf_price"
                style="@style/Theme.BacaLagi.TextInputLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/shr_hint_price">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
            </com.google.android.material.textfield.TextInputLayout>
        </LinearLayout>
    </ScrollView>

    <Button
        android:id="@+id/filledButton_post"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:text="@string/submit"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <include
        android:id="@+id/loading_container"
        layout="@layout/container_loading"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/main_toolbar" />

</androidx.constraintlayout.widget.ConstraintLayout>
